# mockInterview.ai

./: .gcloudignore  .gitignore  ARCHITECTURE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
app/: __init__.py  agent.py  fast_api_app.py
app/api/v1/: router.py
app/app_utils/: auth.py  config.py  database.py  file_search.py  gcs.py  identity.py  telemetry.py  typing.py
app/app_utils/data/: company_cultures.py
app/models/v1/: schemas.py
app/prompts/v1/: feedback_prompt.py  (+1 more)
app/tools/: __init__.py  cv_search.py  get_entreprise_culture.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/interview_agent/: agent.py
deployment/: README.md
deployment/terraform/: apis.tf  iam.tf  providers.tf  service.tf  storage.tf  telemetry.tf  variables.tf
docs/: ARCHITECTURE.md  HACKATHON.md
frontend/: index.html  metadata.json  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.scss  App.test.tsx  App.tsx  index.css  index.tsx  multimodal-live-types.ts  setupTests.ts  vite-env.d.ts
src/: App.tsx  index.css
src/components/: AIOverlay.tsx  CodeEditor.tsx  ControlBar.tsx  ProblemPane.tsx
src/hooks/: useGeminiLive.ts
src/lib/: audioUtils.ts  gemini.ts
tests/: TESTING_STRATEGY.md  test_feedback_api.py
tests/integration/: test_server_e2e.py
tests/load_test/: load_test.py
tests/unit/: test_config.py  test_dummy.py  test_file_search.py  test_file_search_utils.py  test_tools.py
(+66 files in other folders)
